# nodeble-api-server

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: shellcheck.yml
config/: api.yaml.example
deploy/: deploy.sh  nodeble-api-server.service
docs/: vps-install.md
scripts/: bootstrap.sh
src/nodeble_api_server/: __main__.py  actions.py  app.py  audit.py  audit_reader.py  auth.py  cli.py  config.py  config_writer.py  crontab_ops.py  history_reader.py  install_runner.py  install_state.py  logging_setup.py  logs.py  market.py  positions_history_reader.py  release_manifest.py  session_extractor.py  snapshot.py  snapshot_writer.py  state_reader.py  tiger_creds.py  ws.py
tests/: test_actions.py  test_actions_route.py  test_audit.py  test_audit_reader.py  test_auth.py  test_cli.py  test_close_action.py  test_close_route.py  test_config_write.py  test_config_writer.py  test_crontab_ops.py  test_health.py  test_history_reader.py  test_install_runner.py  test_install_runner_canonical_e2e.py  test_install_state.py  test_killswitch.py  test_logging_setup.py  test_logs.py  test_market.py  test_orchestrator_route.py  test_pnl_route.py  test_positions_history_reader.py  test_release_manifest.py  test_server_info.py  test_server_routes.py  test_session_extractor.py  test_session_history_routes.py  test_shims.py  test_snapshot.py  test_snapshot_writer.py  test_state_reader.py  test_strategies_routes.py  test_tiger_creds.py  test_ws.py
tests/aggregators/: test_daily_summary.py  test_discrepancy_detector.py  test_session.py
(+22 files in other folders)
