[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodeble-api-server"
version = "0.1.0"
description = "FastAPI sidecar for NODEBLE desktop app — exposes read/write access to all strategy modules on the customer VPS"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.13.2",
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nodeble_api_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "--cov=src/nodeble_api_server --cov-report=term-missing"
